# pinot-rest-proxy

./: .editorconfig  .env  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
pinot_rest_proxy/: __init__.py  app.py  asgi.py  client.py  settings.py  tasks.py  views.py
