[tool.poetry]
name = "pinot-rest-proxy"
version = "0.1.0"
description = "Simple REST service providing a convenient way for applications to query any Pinot table"
authors = ["Nicolas Lecoy <nicolas.lecoy@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nlecoy/pinot-rest-proxy"
documentation = "https://nlecoy.github.io/pinot-rest-proxy"
keywords = ["pinot", "rest", "proxy", "tenant"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.2"
sanic = "^20.9.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.github
  | \.venv
  | \.vscode
  | build
  | dist
)/
'''

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
filter_files = true
